CreateEvent page finished

--- a/Capstone/Views/Account/Register.cshtml
+++ b/Capstone/Views/Account/Register.cshtml
@@ -128,13 +128,12 @@
     </div>
     <div class="form-inline">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
-            <input type="button" class="btn btn-default" value="Cancel" />
+            <input type="submit" class="btn btn-success value=" register" />
+            <input type="button" class="btn btn-danger" value="Cancel" />
         </div>
     </div>
-    <p>Date: <input type="text" id="datepicker"></p>
-    <hr/>
-    
+    <hr />
+
 }
 
 @section Scripts {
