--- a/Capstone/Views/Shared/_Layout.cshtml
+++ b/Capstone/Views/Shared/_Layout.cshtml
@@ -22,11 +22,23 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("View Events", "Events", "Home")</li>
-                    @*<li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                    <li>@Html.ActionLink("Search Events", "Events", "Home")</li>
+                    <li>@Html.ActionLink("My Events", "About", "Home")</li>
+                    <li>@Html.ActionLink("Schedule Events", "Contact", "Home")</li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="UserName">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span><span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li>@Html.ActionLink("Update Account", "Contact", "Home")</li>
+                            <li class="divider"></li>
+                            <li>@Html.ActionLink("Logout", "Contact", "Home")</li>
+                    
+                        </ul>
+                    </li>
                 </ul>
             </div>
+            
         </div>
     </div>
     <div class="container body-content">
