--- a/Capstone/Views/Shared/_Layout.cshtml
+++ b/Capstone/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Search Events", "Events", "Home")</li>
                     <li>@Html.ActionLink("My Events", "About", "Home")</li>
-                    <li>@Html.ActionLink("Schedule Events", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Schedule Events", "CreateEvent", "Event")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="UserName">
