start date changed to start datetime event controller started

--- a/Capstone/Views/Event/CreateEvent.cshtml
+++ b/Capstone/Views/Event/CreateEvent.cshtml
@@ -17,17 +17,17 @@
             @Html.ValidationMessageFor(m => m.Title, "", new { @class = "text-danger" })
         </div>
     </div>
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(m => m.EventDate, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.EventDate, new { @type="date", @class = "form-control" })
             @Html.ValidationMessageFor(m => m.EventDate, "", new { @class = "text-danger" })
         </div>
-    </div>
+    </div>*@
     <div class="form-group">
         @Html.LabelFor(m => m.StartTime, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextBoxFor(m => m.StartTime, new { @type = "time", @class = "form-control" })
+            @Html.TextBoxFor(m => m.StartTime, new { @type = "datetime-local", @class = "form-control" })
             @Html.ValidationMessageFor(m => m.StartTime, "", new { @class = "text-danger" })
         </div>
     </div>
