--- a/Capstone/Views/Home/Index.cshtml
+++ b/Capstone/Views/Home/Index.cshtml
@@ -1,12 +1,8 @@
-﻿@{
-    ViewBag.Title = "Home";
-}
-
-@using Capstone.Models
-@model LoginViewModel
+﻿@model LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
+@using Capstone.Models
 
 <h2>Log in to sign up for events</h2>
 <div class="row">
