--- a/Capstone/Views/Home/Events.cshtml
+++ b/Capstone/Views/Home/Events.cshtml
@@ -6,5 +6,10 @@
 
 <h2>Events</h2>
 <hr/>
-@{}  
+@foreach (var item in Model.Events)
+{
+    @Html.DisplayFor(m=>item.Title)
+    @Html.DisplayFor(m => item.StartDate)
+    @Html.DisplayFor(m => item.EndDate)
+}
 
