--- a/Capstone/Views/Home/AttendingEvents.cshtml
+++ b/Capstone/Views/Home/AttendingEvents.cshtml
@@ -1,7 +1,37 @@
-﻿
+﻿@model Capstone.Models.EventsViewModels
 @{
     ViewBag.Title = "AttendingEvents";
 }
 
 <h2>AttendingEvents</h2>
 <hr />
+<table class="table table-striped">
+    <tr>
+        <th>Event Title</th>
+        <th>Start Date</th>
+        <th>End Date</th>
+        <th>Location</th>
+        <th>Type</th>
+    </tr>
+    @foreach (var item in Model.Events)
+    {
+    <tr>
+        <td>
+            @Html.DisplayFor(m => item.Title)
+        </td>
+        <td>
+            @Html.DisplayFor(m => item.StartDate)
+        </td>
+        <td>
+            @Html.DisplayFor(m => item.EndDate)
+        </td>
+        <td>
+            @Html.DisplayFor(m => item.Location)
+        </td>
+        <td>
+            @Html.DisplayFor(m => item.Type)
+        </td>
+    </tr>
+    }
+
+</table>
