--- a/Capstone/Views/Shared/_Layout.cshtml
+++ b/Capstone/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Blue Team Capstone", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Blue Team Capstone", "Events", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -33,7 +33,7 @@
                         <ul class="dropdown-menu" role="menu">
                             <li>@Html.ActionLink("Update Account", "UpdateAccount", "Account")</li>
                             <li class="divider"></li>
-                            <li>@Html.ActionLink("Logout", "Contact", "Home")</li>
+                            <li>@Html.ActionLink("Logout", "Index", "Home")</li>
                     
                         </ul>
                     </li>
