--- a/Capstone/Views/Home/MyEvents.cshtml
+++ b/Capstone/Views/Home/MyEvents.cshtml
@@ -6,7 +6,7 @@
 
 <h2>My Events</h2>
 <hr />
-<table class="table table-striped">
+<table class="table table-striped table-hover">
     <tr>
         <th>Event Title</th>
         <th>Start Date</th>
@@ -16,23 +16,26 @@
     </tr>
     @foreach (var item in Model.Events)
     {
-    <tr>
-        <td>
-            @Html.DisplayFor(m => item.Title)
-        </td>
-        <td>
-            @Html.DisplayFor(m => item.StartDate)
-        </td>
-        <td>
-            @Html.DisplayFor(m => item.EndDate)
-        </td>
-        <td>
-            @Html.DisplayFor(m => item.Location)
-        </td>
-        <td>
-            @Html.DisplayFor(m => item.Type)
-        </td>
-    </tr>
+
+        //<a href="@Url.Action("Details","Event")">
+            <tr>
+                <td>
+                    @Html.DisplayFor(m => item.Title)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.StartDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.EndDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.Location)
+                </td>
+                <td>
+                    @Html.DisplayFor(m => item.Type)
+                </td>
+            </tr>
+       // </a>
     }
 
 </table>
