--- a/Capstone/Views/Account/UpdateAccount.cshtml
+++ b/Capstone/Views/Account/UpdateAccount.cshtml
@@ -1,4 +1,4 @@
-﻿@model Capstone.Models.RegisterViewModel
+﻿@model Capstone.Models.UpdateAccountViewModel
 @{
     ViewBag.Title = "Update Account";
 }
