--- a/Capstone/Views/Home/Events.cshtml
+++ b/Capstone/Views/Home/Events.cshtml
@@ -6,16 +6,20 @@
 
 <h2>Upcoming Events</h2>
 <hr/>
-<table class="table table-striped">
+@using (Html.BeginForm("Details", "Event", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+{
+<table class="table table-striped table-hover">
     <tr>
         <th>Event Title</th>
         <th>Start Date</th>
         <th>End Date</th>
         <th>Location</th>
         <th>Type</th>
+        <th></th>
     </tr>
 @foreach (var item in Model.Events)
-{   <tr>
+{   
+    <tr>
         <td>
             @Html.DisplayFor(m=>item.Title)
         </td>
@@ -31,7 +35,13 @@
         <td>
             @Html.DisplayFor(m => item.Type)
         </td>
+        <td>
+            <input action="" onclick="" value="Details" type="button" class="button button-primary"/>
+        </td>
     </tr>
+
+    
 }
 
 </table>
+}
